<resources>
    <string name="app_name">CAPP</string>
    <string name="no_internet">Please check your Internet connection and try again.</string>
    <!-- Home Screen Texts -->
    <string name="skip">skip</string>
    <string name="login">log in</string>
    <string name="login_account">log in to my registry</string>
    <string name="create_registry">create registry</string>

    <!-- Drawer Texts -->
    <string name="home">home</string>
    <string name="discover">discover products</string>
    <string name="my_registry">my registry</string>
    <string name="my_checklist">my checklist</string>
    <string name="logout">log out</string>
    <string name="browse_category">browse by category</string>
    <string name="discover_products">discover products</string>
    <!-- Login Texts -->
    <string name="whoops_this_email_address_is_invalid">whoops! this email address is invalid.</string>
    <string name="whoops_this_email_address_is_invalid_starter">whoops!</string>
    <string name="sign_in_with_your_registry_account">Sign in with your Registry account.</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="welcome">welcome</string>
    <string name="welcome_back">welcome back</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="forgot_my_password">forgot my password</string>
    <string name="trouble_logging">trouble logging in</string>


    <string name="title_activity_student_dash_board">StudentDashBoardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="get_started_btn">GET STARTED</string>
    <string name="option_select">Select Branch</string>

    <!-- // registration Error messages..-->
    <string name="reg_invalid_first_name">Please enter first name</string>
    <string name="reg_invalid_last_name">Please enter last name</string>
    <string name="invalid_characters">Invalid characters</string>
    <string name="login_invalid_password">Please enter password</string>
    <string name="reg_incorrect_email">Please enter email address</string>
    <string name="reg_invalid_password">Please enter password</string>
    <string name="incorrect_email_text">Incorrect email format</string>
    <string name="reg_invalid_pincode">Please enter pincode</string>
    <string name="reg_invalid_city_name">Please Enter City Name</string>
    <string name="reg_invalid_mobile_number">Please Enter Mobile Number</string>
    <string name="reg_invalid_branch_selection">Please Select Branch Name</string>
    <string name="reg_invalid_blood_selection">Please Select blood Group</string>
    <string name="incorrect_password_error_text">Password should contain at least 8 characters, an uppercase letter, a lowercase letter, and one number or special character</string>
    <string name="reg_invalid_street_name">Please Street Name </string>
    <string name="message_txt">Message</string>
    <string name="deny">DENY</string>
    <string name="allow">ALLOW</string>
    <string name="continue_btn">Continue</string>
    <string name="ok_btn">OK</string>
    <string name="call">CALL</string>
    <string name="ok_popup">OK</string>
    <string name="confirm_btn">confirm</string>
    <string name="dont_allow_btn">Don\'t Allow</string>
    <string name="done_btn">done</string>
    <string name="no_camera_permission">You need to provide permission to acess camera</string>


    <!-- Names -->

    <string-array name="names">

        <item>Baji G</item>
        <item>Ramu N</item>
        <item>Susheel B</item>
        <item>Sumanth g</item>
        <item>Pavan H</item>
        <item>Mahesh H</item>

        <item>Baji G</item>
        <item>Ramu N</item>
        <item>Susheel B</item>
        <item>Sumanth g</item>
        <item>Pavan H</item>
        <item>Mahesh H</item>

        <item>Baji G</item>
        <item>Ramu N</item>
        <item>Susheel B</item>
        <item>Sumanth g</item>
        <item>Pavan H</item>
        <item>Mahesh H</item>

    </string-array>

    <!--  Pictures -->

    <array name="profile_pics">

        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>

        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>

        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>
        <item>@drawable/student_logo</item>

    </array>

    <!--  Email -->

    <string-array name="email">

        <item>baji@xyz.com</item>
        <item>ramu@xyz.com</item>
        <item>susheel@xyz.com</item>
        <item>sumanth@xyz.com</item>
        <item>pavanh@xyz.com</item>
        <item>mahesh@xyz.com</item>

        <item>baji@xyz.com</item>
        <item>ramu@xyz.com</item>
        <item>susheel@xyz.com</item>
        <item>sumanth@xyz.com</item>
        <item>pavanh@xyz.com</item>
        <item>mahesh@xyz.com</item>

        <item>baji@xyz.com</item>
        <item>ramu@xyz.com</item>
        <item>susheel@xyz.com</item>
        <item>sumanth@xyz.com</item>
        <item>pavanh@xyz.com</item>
        <item>mahesh@xyz.com</item>
    </string-array>

    <string-array name="branch_array">

        <item>IT</item>

        <item>CSE</item>

        <item>ECE</item>

        <item>EEE</item>

        <item>CIVIL</item>

        <item>MECH</item>

        <item>CHE</item>

    </string-array>

    <string-array name="blood_group">
        <item>A+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>o+</item>
        <item>A-</item>
        <item>B-</item>
        <item>AB-</item>
        <item>o-</item>
    </string-array>


    <string-array name="sem_array">
        <item>I-I</item>
        <item>I-II</item>
        <item>II-I</item>
        <item>II-II</item>
        <item>III-I</item>
        <item>III-II</item>
        <item>IV-I</item>
        <item>IV-II</item>
    </string-array>

    <string-array name="year_array">
        <item>2013-14</item>
        <item>2014-15</item>
        <item>2015-16</item>
        <item>2016-17</item>

    </string-array>

</resources>
