<?xml version="1.0" encoding="utf-8"?>
<com.photon.mvpdemoapp.ui.views.UnTouchableRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.activities.LoginActivity">

    <com.photon.mvpdemoapp.ui.views.UnTouchableRelativeLayout
        android:id="@+id/activity_login_toolbar_holder_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_default" />

    </com.photon.mvpdemoapp.ui.views.UnTouchableRelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_login_toolbar_holder_layout">

        <com.photon.mvpdemoapp.ui.views.UnTouchableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_login_root_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.activities.LoginActivity">

            <com.photon.mvpdemoapp.ui.views.FontTextView
                style="@style/activity_login_sign_in_with_your_registry_account_text_view_style"
                android:text="@string/sign_in_with_your_registry_account"
                app:fontFile="Archer-Semibold.otf" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_login_email_text_input_layout"
                style="@style/activity_login_email_text_input_layout_style"
                android:hint="@string/email">

                <com.photon.mvpdemoapp.ui.views.TextInputEditTextCustom
                    android:id="@+id/activity_login_email_text_input_edit_text"
                    style="@style/activity_login_email_text_input_edit_text_style"
                    android:drawableRight="@drawable/ic_drawable_close" />
            </android.support.design.widget.TextInputLayout>

            <com.photon.mvpdemoapp.ui.views.UnTouchableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/activity_login_password_text_input_layout"
                    style="@style/activity_login_password_text_input_layout_style"
                    android:hint="@string/password">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_login_password_text_input_edit_text"
                        style="@style/activity_login_password_text_input_edit_text_style" />
                </android.support.design.widget.TextInputLayout>

                <com.photon.mvpdemoapp.ui.views.UnTouchableLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentRight="true">

                    <ImageView
                        android:id="@+id/activity_login_password_cross_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:src="@drawable/ic_drawable_close"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/activity_login_password_show_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:src="@drawable/ic_password_eye_open"
                        android:visibility="gone" />

                </com.photon.mvpdemoapp.ui.views.UnTouchableLinearLayout>
            </com.photon.mvpdemoapp.ui.views.UnTouchableRelativeLayout>

            <com.photon.mvpdemoapp.ui.views.UnTouchableLinearLayout
                android:id="@+id/activity_login_forgot_password_layout"
                style="@style/activity_login_forgot_password_layout_style">

                <com.photon.mvpdemoapp.ui.views.FontTextView
                    style="@style/activity_login_forgot_password_text_view_style"
                    android:text="@string/forgot_my_password"
                    app:fontFile="Archer-Semibold.otf" />

                <android.support.v7.widget.AppCompatImageView
                    style="@style/activity_login_forgot_password_image_view_style"
                    android:src="@drawable/ic_next" />
            </com.photon.mvpdemoapp.ui.views.UnTouchableLinearLayout>

            <com.photon.mvpdemoapp.ui.views.UnTouchableLinearLayout
                android:id="@+id/activity_login_trouble_logging_layout"
                style="@style/activity_login_forgot_password_layout_style">

                <com.photon.mvpdemoapp.ui.views.FontTextView
                    style="@style/activity_login_forgot_password_text_view_style"
                    android:text="@string/trouble_logging"
                    app:fontFile="Archer-Semibold.otf" />

                <android.support.v7.widget.AppCompatImageView
                    style="@style/activity_login_forgot_password_image_view_style"
                    android:src="@drawable/ic_next" />
            </com.photon.mvpdemoapp.ui.views.UnTouchableLinearLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/activity_login_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>


        </com.photon.mvpdemoapp.ui.views.UnTouchableLinearLayout>

    </ScrollView>

    <com.photon.mvpdemoapp.ui.views.FontTextView
        android:id="@+id/activity_login_error_text_view"
        style="@style/activity_login_error_text_view_style"
        android:layout_below="@+id/activity_login_toolbar_holder_layout"
        android:text="@string/whoops_this_email_address_is_invalid"
        app:fontFile="Archer-Semibold.otf" />

    <com.photon.mvpdemoapp.ui.views.FontButton
        android:id="@+id/activity_login_sign_in_button"
        style="@style/activity_login_sign_in_button_style"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_in"
        app:fontFile="Archer-Semibold.otf" />
</com.photon.mvpdemoapp.ui.views.UnTouchableRelativeLayout>